Wed Mar  9 15:04:22 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm3_gc_old_full.rb: add GC.start benchmark.

	* benchmark/bm_vm3_gc_old_immediate.rb: ditto.

	* benchmark/bm_vm3_gc_old_lazy.rb: ditto.

Wed Mar  9 14:59:11 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: exit benchmarking if a benchmark process
	  receives signals.

Wed Mar  9 13:22:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/memory_status.rb: make Memory::Status independent of
	  MiniTest::Skip.

	* test/lib/test/unit/assertions.rb (assert_no_memory_leak): skip
	  if Memory::Status is not available.

Wed Mar  9 09:19:55 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/io/wait/test_io_wait.rb (test_wait_readwrite_timeout):
	  select(2) in AIX returns "readable" for the write-side fd
	  of a pipe, so it is not possible to use a pipe to test
	  the read-write timeout of IO#wait on AIX.

Wed Mar  9 03:35:22 2016  Charles Oliver Nutter  <headius@headius.com>

	* test/ruby/test_require.rb (test_require_with_loaded_features_pop):
	  Only remove PATH so threads don't accidentally double-pop.

Wed Mar  9 00:29:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_alias): the original name should be properly
	  available method_added method, set the name before calling the
	  hook.

Wed Mar  9 00:07:03 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::LogDevice#initialize): define using
	  keyword arguments.

Tue Mar  8 23:37:07 2016  Charles Oliver Nutter  <headius@headius.com>

	* test/ruby/test_array.rb: split out the test for no stack error
	  on large input for test_permutation, test_repeated_permutation,
	  and test_repeated_combination, and make them all timeout:30.

Tue Mar  8 17:20:21 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* intern.h (rb_divmod): assume compilers `/` and `%` comply C99
	  and reduce branching. If a compiler doesn't comply, add #ifdefs.

	* intern.h (rb_div): added for Ruby's behavior.
